force-app/main/default/objects/p2s_base1__Log__c/fields/p2s_base1__DateTimeLogged__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__DateTimeLogged__c</fullName>
    <label>DateTime Logged</label>
    <type>DateTime</type>
</CustomField>