force-app/main/default/objects/p2s_base1__Log__c/fields/p2s_base1__Log__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Log__c</fullName>
    <label>Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>