force-app/main/default/objects/p2s_base1__Log__c/fields/p2s_base1__MillisecondsLogged__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__MillisecondsLogged__c</fullName>
    <label>Milliseconds Logged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>