force-app/main/default/objects/p2s_base1__Log__c/fields/p2s_base1__RelatedTo__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__RelatedTo__c</fullName>
    <label>Related To</label>
    <type>TextArea</type>
</CustomField>