force-app/main/default/objects/p2s_base1__Log__c/listViews/p2s_base1__Compressed.listView-meta.xml
<ListView>
    <fullName>p2s_base1__Compressed</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>p2s_base1__Log__c</columns>
    <columns>p2s_base1__DateTimeLogged__c</columns>
    <columns>p2s_base1__SecondsLogged__c</columns>
    <columns>p2s_base1__MillisecondsLogged__c</columns>
    <columns>p2s_base1__ExecutionGUID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>p2s_base1__DebugLevel__c</field>
        <operation>equals</operation>
        <value>Compressed</value>
    </filters>
    <label>Compressed</label>
</ListView>