force-app/main/default/objects/p2s_base1__Log__c/listViews/p2s_base1__Fine.listView-meta.xml
<ListView>
    <fullName>p2s_base1__Fine</fullName>
    <columns>NAME</columns>
    <columns>p2s_base1__DebugLevel__c</columns>
    <columns>p2s_base1__RelatedTo__c</columns>
    <columns>p2s_base1__Log__c</columns>
    <columns>p2s_base1__DateTimeLogged__c</columns>
    <columns>p2s_base1__SecondsLogged__c</columns>
    <columns>p2s_base1__MillisecondsLogged__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>p2s_base1__DebugLevel__c</field>
        <operation>equals</operation>
        <value>Debug,Critical,Fine</value>
    </filters>
    <label>Fine</label>
</ListView>